Add header adaptive

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,13 @@
 <header class="header">
     <div class="container">
+        <div class="header__logo-burger">
         <div class="header__logo"><img src="images/logo_Oxit.png" alt="logo"></div>
+        <div class="header__burger">
+            <span class="header__burger-line header__burger-line1"></span>
+            <span class="header__burger-line header__burger-line2"></span>
+            <span class="header__burger-line header__burger-line3"></span>
+        </div>
+        </div>
         <div class="header__links-button">
             <div class="header__links">
                 <ol>
