--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 @@include('html/header.html')
+<div class="container ">
+    <div class="top-block">
+        @@include('html/content-left.html')
+    </div>
+</div>
 <script src="js/burger.js"></script>
 </body>
 </html>
