Add registration form

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -11,7 +11,7 @@
         <div class="header__links-button">
             <div class="header__links">
                 <ol>
-                    <li><a href="">Головна</a></li>
+                    <li><a href="#main">Головна</a></li>
                     <li><a href="">Програма курсу</a></li>
                     <li><a href="">Відгуки про курс</a></li>
                     <li><a href="">Відео</a></li>
