--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
 @@include('html/header.html')
-<div class="container ">
+<div id="main" class="container ">
     <div class="top-block">
         @@include('html/content-left.html')
+        @@include('html/registration.html')
     </div>
 </div>
 <script src="js/burger.js"></script>
+<script src="js/phone.js"></script>
+<script src="js/form-validation.js"></script>
 </body>
 </html>
