--- a/src/html/header.html
+++ b/src/html/header.html
@@ -12,7 +12,7 @@
             <div class="header__links">
                 <ol>
                     <li><a href="#main">Головна</a></li>
-                    <li><a href="">Програма курсу</a></li>
+                    <li><a href="#program">Програма курсу</a></li>
                     <li><a href="">Відгуки про курс</a></li>
                     <li><a href="">Відео</a></li>
                     <li><a href="">Ментори</a></li>
