--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         @@include('html/registration.html')
     </div>
 </div>
+@@include('html/development.html')
 <script src="js/burger.js"></script>
 <script src="js/phone.js"></script>
 <script src="js/form-validation.js"></script>
