--- a/src/html/development.html
+++ b/src/html/development.html
@@ -1,3 +1,28 @@
 <div id="program" class="development">
-
+    <div class="container">
+        <h2>Курс «Розробка сайтів»</h2>
+        <div class="development__content">
+            <div class="development__block">
+                <div class="development__image">
+                    <img src="images/icons/course-icon-1.png" alt="course-1">
+                </div>
+                <h5>Розробка сайтів на WordPress</h5>
+                <p>Курс складається з коротких навчальних відео, на яких ти пізнаєш основи WordPress, навчишся створювати сайти різної складності: від блогів до інтернет магазинів. Всі знання закріпиш за допомогою тестових завдань.</p>
+            </div>
+            <div class="development__block">
+                <div class="development__image">
+                    <img src="images/icons/course-icon-2.png" alt="course-2">
+                </div>
+                <h5>Розробка сайтів на Drupal 8</h5>
+                <p>Для створення чудових сайтів на Drupal 8, цеглинка за цеглинкою, ти пізнаєш секрети основних та додаткових Drupal-модулів(Views, Rules, Panels, Devel, Paragraph та багатьох інших).</p>
+            </div>
+            <div class="development__block">
+                <div class="development__image">
+                    <img src="images/icons/course-icon-3.png" alt="course-3">
+                </div>
+                <h5>Ознайомлення з тестуванням</h5>
+                <p>Ти дізнаєшся про забезпечення якості в контексті різних моделей розробки ПЗ. Також QA-спеціаліст розкаже про види тестування(функціональне, регресивне, системне, тестування швидкодії тощо).</p>
+            </div>
+        </div>
+    </div>
 </div>
