--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     </div>
 </div>
 @@include('html/development.html')
+@@include('html/statistics.html')
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
