--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 </div>
 @@include('html/development.html')
 @@include('html/statistics.html')
+@@include('html/testimonials.html')
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -27,5 +28,6 @@
 <script src="js/phone.js"></script>
 <script src="js/form-validation.js"></script>
 <script src="js/slider.js"></script>
+<script src="js/testimonials-slider.js"></script>
 </body>
 </html>
