--- a/src/html/testimonials.html
+++ b/src/html/testimonials.html
@@ -7,21 +7,21 @@
                     <p>Під час проходження курсів Drupal у школі OxIT я навчився створювати не досить складні сайти та знайшов справу, якою хочу займатись. Після успішного завершення курсів мені надали можливість продовжити навчання вже в якості Intern Site Builder. Зараз я можу сказати, що Drupal та OxIT повністю змінили моє життя.</p>
                 </div>
                 <h5>Коля</h5>
-                <p>Drupal-девелопер</p>
+                <p class="testimonials__role">Drupal-девелопер</p>
             </div>
             <div class="testimonials__block">
                 <div class="testimonials__message">
-                    <p>Під час проходження курсів Drupal у школі OxIT я навчився створювати не досить складні сайти та знайшов справу, якою хочу займатись. Після успішного завершення курсів мені надали можливість продовжити навчання вже в якості Intern Site Builder. Зараз я можу сказати, що Drupal та OxIT повністю змінили моє життя.</p>
+                    <p>Відвідуючи курси Drupal у OxIT, я здобув навички створення базових веб-сайтів та знайшов своє професійне покликання. Успішно завершивши навчання, я отримав можливість продовжити свій розвиток на позиції Intern Site Builder. Зараз я можу впевнено сказати, що Drupal та OxIT змінили мою професійну траєкторію.</p>
                 </div>
-                <h5>Коля</h5>
-                <p>Drupal-девелопер</p>
+                <h5>Артем</h5>
+                <p class="testimonials__role">Drupal-девелопер</p>
             </div>
             <div class="testimonials__block">
                 <div class="testimonials__message">
-                    <p>Під час проходження курсів Drupal у школі OxIT я навчився створювати не досить складні сайти та знайшов справу, якою хочу займатись. Після успішного завершення курсів мені надали можливість продовжити навчання вже в якості Intern Site Builder. Зараз я можу сказати, що Drupal та OxIT повністю змінили моє життя.</p>
+                    <p>Курси Drupal у школі OxIT дали мені можливість освоїти основи веб-розробки та відкрити для себе цікаву сферу діяльності. Після закінчення програми мені запропонували продовжити навчання як Intern Site Builder. Тепер я з впевненістю можу стверджувати, що Drupal та OxIT стали поворотним моментом у моєму житті.</p>
                 </div>
-                <h5>Коля</h5>
-                <p>Drupal-девелопер</p>
+                <h5>Степан</h5>
+                <p class="testimonials__role">Drupal-девелопер</p>
             </div>
         </div>
     </div>
