--- a/src/html/header.html
+++ b/src/html/header.html
@@ -13,8 +13,8 @@
                 <ol>
                     <li><a href="#main">Головна</a></li>
                     <li><a href="#program">Програма курсу</a></li>
-                    <li><a href="">Відгуки про курс</a></li>
-                    <li><a href="">Відео</a></li>
+                    <li><a href="#testimonials">Відгуки про курс</a></li>
+                    <li><a href="#video">Відео</a></li>
                     <li><a href="">Ментори</a></li>
                 </ol>
             </div>
