--- a/src/html/testimonials.html
+++ b/src/html/testimonials.html
@@ -1,4 +1,4 @@
-<div class="testimonials">
+<div id="testimonials" class="testimonials">
     <div class="container">
         <h2>Що кажуть студенти наших курсів</h2>
         <div class="testimonials__content">
