--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
 @@include('html/statistics.html')
 @@include('html/testimonials.html')
 @@include('html/video.html')
+@@include('html/mentors.html')
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -30,5 +31,6 @@
 <script src="js/form-validation.js"></script>
 <script src="js/slider.js"></script>
 <script src="js/testimonials-slider.js"></script>
+<script src="js/mentors-slider.js"></script>
 </body>
 </html>
