Add adaptive for metors block

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -15,7 +15,7 @@
                     <li><a href="#program">Програма курсу</a></li>
                     <li><a href="#testimonials">Відгуки про курс</a></li>
                     <li><a href="#video">Відео</a></li>
-                    <li><a href="">Ментори</a></li>
+                    <li><a href="#mentors">Ментори</a></li>
                 </ol>
             </div>
             <div class="header__button"><button>Подати заявку</button></div>
