--- a/src/html/mentors.html
+++ b/src/html/mentors.html
@@ -1,4 +1,4 @@
-<div class="mentors">
+<div id="mentors" class="mentors">
     <div class="container">
         <h2>Наші ментори</h2>
         <div class="mentors__content">
