--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
 @@include('html/testimonials.html')
 @@include('html/video.html')
 @@include('html/mentors.html')
+@@include('html/map.html')
+@@include('html/cta.html')
+@@include('html/copyright.html')
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
