--- a/src/html/cta.html
+++ b/src/html/cta.html
@@ -1,22 +1,27 @@
+<!-- Call-to-Action (CTA) section -->
 <div class="cta">
     <div class="container">
+        <!-- Phone contact block -->
         <div class="cta__block">
-            <img src="images/icons/phone.svg"  alt="phone">
+            <img src="images/icons/phone.svg" alt="phone">
             <h4>Телефон</h4>
             <a href="tel:+380673321755">+38 067 332 17 55</a>
         </div>
+        <!-- Email contact block -->
         <div class="cta__block">
-            <img src="images/icons/mail.svg"  alt="mail">
+            <img src="images/icons/mail.svg" alt="mail">
             <h4>E-mail</h4>
             <a href="mailto:office@it.volyn.ua">office@it.volyn.ua</a>
         </div>
+        <!-- Address block -->
         <div class="cta__block">
-            <img src="images/icons/location.svg"  alt="location">
+            <img src="images/icons/location.svg" alt="location">
             <h4>Адреса</h4>
             <a href="https://maps.app.goo.gl/BXfzpuZRkdc2fB1B8">вул. Боженка 34г, Луцьк</a>
         </div>
+        <!-- Facebook block -->
         <div class="cta__block">
-            <img src="images/icons/facebook.svg"  alt="facebook">
+            <img src="images/icons/facebook.svg" alt="facebook">
             <h4>Facebook</h4>
             <a href="https://www.facebook.com/oxitschool/">facebook.com/oxitschool</a>
         </div>
