--- a/src/html/development.html
+++ b/src/html/development.html
@@ -1,14 +1,25 @@
+<!-- Main container for the development/program section -->
 <div id="program" class="development">
+    <!-- Container for centering and constraining width -->
     <div class="container">
+        <!-- Main heading for the entire section -->
         <h2>Курс «Розробка сайтів»</h2>
+
+        <!-- Wrapper for all course blocks -->
         <div class="development__content">
+            <!-- Individual course block: WordPress -->
             <div class="development__block">
+                <!-- Course icon container -->
                 <div class="development__image">
                     <img src="images/icons/course-icon-1.png" alt="course-1">
                 </div>
+                <!-- Course title -->
                 <h4>Розробка сайтів на WordPress</h4>
+                <!-- Course description -->
                 <p class="development__text">Курс складається з коротких навчальних відео, на яких ти пізнаєш основи WordPress, навчишся створювати сайти різної складності: від блогів до інтернет магазинів. Всі знання закріпиш за допомогою тестових завдань.</p>
             </div>
+
+            <!-- Individual course block: Drupal 8 -->
             <div class="development__block">
                 <div class="development__image">
                     <img src="images/icons/course-icon-2.png" alt="course-2">
@@ -16,6 +27,8 @@
                 <h4>Розробка сайтів на Drupal 8</h4>
                 <p class="development__text">Для створення чудових сайтів на Drupal 8, цеглинка за цеглинкою, ти пізнаєш секрети основних та додаткових Drupal-модулів(Views, Rules, Panels, Devel, Paragraph та багатьох інших).</p>
             </div>
+
+            <!-- Individual course block: Testing introduction -->
             <div class="development__block">
                 <div class="development__image">
                     <img src="images/icons/course-icon-3.png" alt="course-3">
