--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,14 +1,19 @@
 <header class="header">
     <div class="container">
+        <!-- Logo and burger menu container -->
         <div class="header__logo-burger">
-        <div class="header__logo"><img src="images/logo_Oxit.png" alt="logo"></div>
-        <div class="header__burger">
-            <span class="header__burger-line header__burger-line1"></span>
-            <span class="header__burger-line header__burger-line2"></span>
-            <span class="header__burger-line header__burger-line3"></span>
+            <!-- Logo -->
+            <div class="header__logo"><img src="images/logo_Oxit.png" alt="logo"></div>
+            <!-- Burger menu icon -->
+            <div class="header__burger">
+                <span class="header__burger-line header__burger-line1"></span>
+                <span class="header__burger-line header__burger-line2"></span>
+                <span class="header__burger-line header__burger-line3"></span>
+            </div>
         </div>
-        </div>
+        <!-- Navigation links and CTA button container -->
         <div class="header__links-button">
+            <!-- Navigation menu -->
             <div class="header__links">
                 <ol>
                     <li><a href="#main">Головна</a></li>
@@ -18,6 +23,7 @@
                     <li><a href="#mentors">Ментори</a></li>
                 </ol>
             </div>
+            <!-- CTA button -->
             <div class="header__button"><button>Подати заявку</button></div>
         </div>
     </div>
