--- a/src/html/statistics.html
+++ b/src/html/statistics.html
@@ -1,24 +1,29 @@
+<!-- Statistics section -->
 <div class="statistics">
     <div class="container">
-    <div class="statistics__block">
-        <img src="images/icons/statistic-icon-1.png" alt="statistics 1">
-        <h3>25</h3>
-        <p>курсів організовано</p>
-    </div>
-    <div class="statistics__block">
-        <img src="images/icons/statistic-icon-2.png" alt="statistics 2">
-        <h3>836</h3>
-        <p>годин занять проведено</p>
-    </div>
-    <div class="statistics__block">
-        <img src="images/icons/statistic-icon-3.png" alt="statistics 3">
-        <h3>500</h3>
-        <p>студентів навчено</p>
-    </div>
-    <div class="statistics__block">
-        <img src="images/icons/statistic-icon-4.png" alt="statistics 4">
-        <h3>120</h3>
-        <p>випускників курсів працевлаштовано</p>
-    </div>
+        <!-- Courses organized statistic -->
+        <div class="statistics__block">
+            <img src="images/icons/statistic-icon-1.png" alt="statistics 1">
+            <h3>25</h3>
+            <p>курсів організовано</p>
+        </div>
+        <!-- Hours of classes conducted statistic -->
+        <div class="statistics__block">
+            <img src="images/icons/statistic-icon-2.png" alt="statistics 2">
+            <h3>836</h3>
+            <p>годин занять проведено</p>
+        </div>
+        <!-- Students taught statistic -->
+        <div class="statistics__block">
+            <img src="images/icons/statistic-icon-3.png" alt="statistics 3">
+            <h3>500</h3>
+            <p>студентів навчено</p>
+        </div>
+        <!-- Graduates employed statistic -->
+        <div class="statistics__block">
+            <img src="images/icons/statistic-icon-4.png" alt="statistics 4">
+            <h3>120</h3>
+            <p>випускників курсів працевлаштовано</p>
+        </div>
     </div>
 </div>
