--- a/src/html/mentors.html
+++ b/src/html/mentors.html
@@ -1,22 +1,29 @@
+<!-- Mentors section -->
 <div id="mentors" class="mentors">
     <div class="container">
+        <!-- Section heading -->
         <h2>Наші ментори</h2>
+
+        <!-- Container for all mentor blocks -->
         <div class="mentors__content">
+            <!-- Mentor block: Viktor -->
             <div class="mentors__block">
+                <!-- Mentor image -->
                 <div class="mentors__image"><img src="images/viktor.png" alt="Viktor"></div>
+                <!-- Mentor description -->
                 <div class="mentors__description">
                     <h3>Віктор</h3>
                     <div class="mentors__text">
+                        <!-- Mentor bio paragraphs -->
                         <p>Майбутнім управлінцям неабияк пощастило - адже з ними ділитиметься досвідом управлінець із величезним досвідом! Сам засновник і СЕО компанії Internet Devels, Віктор Левандовський, висловив бажання бути викладачем на курсах проект-менеджменту.</p>
-                        <p> Віктору є про що розповісти. Він знає все про створення та керування великими компаніями, ефективну комунікацію, успішні проекти і багато іншого. При цьому він ніколи не скаже, що знає все - саморозвиток для нього не закінчується жодної хвилини.</p>
-
+                        <p>Віктору є про що розповісти. Він знає все про створення та керування великими компаніями, ефективну комунікацію, успішні проекти і багато іншого. При цьому він ніколи не скаже, що знає все - саморозвиток для нього не закінчується жодної хвилини.</p>
                         <p>На книжкових Віктора полицях сотні прочитаних книг про управління не тільки А от заповітні мрії не стоять на полиці, бо Віктор вміє впевнено йти до їхнього здійснення. Тільки недавно він передавав усім привіт з Ельбрусу - найвищої точки Європи.</p>
-
                         <p>Буде нестримна, мов гірська лавина, енергія, помножена на мудрість і досвід. І ви таке пропустите? Записуйтесь уже зараз!</p>
                     </div>
                 </div>
             </div>
 
+            <!-- Mentor block: Mark (same as Viktor's block) -->
             <div class="mentors__block">
                 <div class="mentors__image"><img src="images/mark.png" alt="Mark"></div>
                 <div class="mentors__description">
@@ -32,6 +39,7 @@
                 </div>
             </div>
 
+            <!-- Mentor block: Vova (same as Viktor's block) -->
             <div class="mentors__block">
                 <div class="mentors__image"><img src="images/vova.png" alt="Vova"></div>
                 <div class="mentors__description">
