--- a/src/html/registration.html
+++ b/src/html/registration.html
@@ -1,32 +1,47 @@
 <div class="registration">
+  <!-- Form title -->
   <h3>Зареєструватися на курси</h3>
+
+  <!-- Registration form -->
   <form class="registration__form">
+    <!-- Name input field -->
     <div class="registration__step">
       <label for="name">Ім'я</label>
       <input type="text" id="name" placeholder="Ім'я" required>
     </div>
+
+    <!-- Surname input field -->
     <div class="registration__step">
       <label for="surname">Прізвище</label>
       <input type="text" id="surname" placeholder="Прізвище" required>
     </div>
+
+    <!-- Interests input field -->
     <div class="registration__step">
       <label for="interests">Мене більше цікавить</label>
       <input type="text" id="interests"  placeholder="developer or QA" required>
     </div>
+
+    <!-- Phone number input field with pattern -->
     <div class="registration__step">
       <label for="phone">Номер телефону</label>
       <input type="tel" id="phone" placeholder="Номер телефону: +(380)-xxx-xx-xx" pattern="+(380)-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
     </div>
+
+    <!-- Email input field -->
     <div class="registration__step">
       <label for="email">Email</label>
       <input type="email" id="email"  placeholder="Email" required>
     </div>
+
+    <!-- Privacy policy checkbox -->
     <div class="registration__checkbox">
       <input type="checkbox" id="privacy-policy" required>
       <label for="privacy-policy">
         Я погоджуюсь з <a href="">Політикою Конфіденційності</a></label>
     </div>
 
+    <!-- Submit button -->
     <div class="registration__button">
       <button type="submit">Зареєструватися зараз</button>
     </div>
